main.css
* {
    margin: 0;
    padding: 0;
    font-family: 'Roboto', 'sans-serif';
}

body {
    display: flex;
    justify-content: center;
    background-color: darkslateblue;
    height: 100vh;
    width: 100vw;
    margin: 0;
    padding: 0;
    overflow: hidden;
}

.container {
    display: flex;
    width: 500px;
    max-height: 954px;
    overflow-y: auto;
    flex-direction: column;
}

.ballon {
    background-color: #fff;
    padding: 8px;
    border-radius: 8px;
    margin-top: 16px;
    margin-right: 8px;
}

.content {
    display: flex;
    padding: 8px 0;
    flex-direction: column;
    gap: 8px;
}

p {
    font-size: 1.2em;
}

time {
    font-size: 12px;
    color: rgb(165, 164, 164);
}

.buttons {
    max-width: 90px;
    position: absolute;
    right: 30px;
    bottom: 10px;
}

.btn {
    padding: 8px;
    background-color: aquamarine;
    border-radius: 6px;
    margin-bottom: 8px;
    text-align: center;
    color: #303030;
    font-weight: 700;
    cursor: pointer;
}

.btn-modal-activated {
    background-color: rgba(128, 255, 212, 0.5);
}

.modal {
    display: flex;
    flex-direction: column;
    background-color: #fff;
    border-radius: 16px;
    padding: 8px;
    height: 250px;
    width: 500px;
    position: absolute;
    top: 35%;
    left: 36.5%;
    display: none;
}

.overlay{
    height: 100vh;
    width: 100vw;
    background-color: rgba(0, 0, 0, 0.7);
    position: fixed;
    visibility: hidden;
}

.new-item {
    padding: 16px 24px 8px 24px;
}

form {
    display: flex;
    flex-direction: column;
    gap: 6px;
}

form label {
    font-size: 22px;
    color: darkslateblue;
}

form textarea {
    resize: none;
    height: 120px;
    width: 100%;
}

button {
    border: none;
    margin-top: 8px;
}

#modal-add {
    background-color: darkslateblue;
    color: #fff;
    width: 100%;
    height: 30px;
    border-radius: 8px;
    padding: 2px;
    text-transform: uppercase;
    cursor: pointer;
}

#modal-cancel {
    background-color: rgba(0, 0, 0, 0);
    width: 100%;
    height: 20px;
    text-transform: uppercase;
    cursor: pointer;
}

